refactor: ItemClassDataLoader 수정
- ItemClass 생성 로직을 createItemClasses() 메소드로 분리하여 코드의 가독성 향상.
- ItemClassService를 통해 데이터베이스에 아이템 클래스 데이터 저장.
- @Getter 어노테이션을 추가하여 itemClasses 리스트 접근 가능하도록 수정.